--- a/fireworks/fireworks/Cargo.toml
+++ b/fireworks/fireworks/Cargo.toml
@@ -16,8 +16,9 @@ default = ["console_error_panic_hook", "console_log", "wee_alloc"]
 console_log = ["web-sys"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
+wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
 js-sys = "0.3.50"
+serde = { version = "1.0", features = ["derive"] }
 web-sys = { version = "0.3.50", features = ["console"], optional = true }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
