Enhance WAGI sample

--- a/hello-wagi/justfile
+++ b/hello-wagi/justfile
@@ -14,3 +14,6 @@ run-native sample:
 
 build sample target:
     cd {{justfile_directory()}}/{{sample}}; cargo build {{target}}
+
+push sample:
+    wasm-to-oci push target/wasm32-wasi/debug/{{sample}}.wasm rustlinzwasm.azurecr.io/wagi-{{sample}}-oci:latest
