--- a/fun_with_trees/.vscode/launch.json
+++ b/fun_with_trees/.vscode/launch.json
@@ -4,6 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": ".NET Core Launch (console)",
+        "type": "coreclr",
+        "request": "launch",
+        "program": "${workspaceFolder}/fractal_tree_csharp_host/bin/Debug/net6.0/fractal_tree_csharp_host.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}",
+        "stopAtEntry": false,
+        "console": "internalConsole"
+    },
         {
             "type": "lldb",
             "request": "launch",
