--- a/wasm-serverless/word_puzzle_spin/Cargo.toml
+++ b/wasm-serverless/word_puzzle_spin/Cargo.toml
@@ -17,9 +17,9 @@ bytes = "1"
 http = "0.2"
 # The Spin SDK.
 spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.1.0" }
+routefinder = "0.5"
 # Crate that generates Rust Wasm bindings from a WebAssembly interface.
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 word_puzzle_generator = { path = "../word_puzzle_generator" }
 
