--- a/axum_intro/Cargo.toml
+++ b/axum_intro/Cargo.toml
@@ -10,3 +10,6 @@ axum = "0.6"
 tokio ={ version = "1.12", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 rand = "0.8"
+serde_yaml = "0.9"
+anyhow = "1"
+thiserror = "1.0"
