--- a/wasm-serverless/word_puzzle_cloudflare/package.json
+++ b/wasm-serverless/word_puzzle_cloudflare/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.0",
 	"scripts": {
 		"deploy": "wrangler publish",
-		"dev": "wrangler dev --local"
+		"dev": "wrangler dev"
 	},
 	"devDependencies": {
-		"wrangler": "^2.0.0"
+    "wrangler": "^3.13.2"
 	}
 }
