--- a/wasm-serverless/word_puzzle_cloudflare/Cargo.toml
+++ b/wasm-serverless/word_puzzle_cloudflare/Cargo.toml
@@ -3,6 +3,10 @@ name = "todo-worker"
 version = "0.0.0"
 edition = "2021"
 
+# https://github.com/rustwasm/wasm-pack/issues/1247
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
@@ -11,7 +15,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 cfg-if = "1.0"
-worker = "0.0.14"
+worker = "0.0.18"
 word_puzzle_generator = { path = "../word_puzzle_generator" }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -19,7 +23,3 @@ word_puzzle_generator = { path = "../word_puzzle_generator" }
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.1", optional = true }
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
