--- a/wasm-serverless/word_puzzle_cloudflare/wrangler.toml
+++ b/wasm-serverless/word_puzzle_cloudflare/wrangler.toml
@@ -1,9 +1,6 @@
 name = "word-puzzle"
 main = "build/worker/shim.mjs"
-compatibility_date = "2022-01-20"
-
-[vars]
-WORKERS_RS_VERSION = "0.0.11"
+compatibility_date = "2023-03-22"
 
 [build]
-command = "cargo install -q worker-build --version 0.0.9 && worker-build --release"
+command = "cargo install -q worker-build && worker-build --release"
